--- a/splash/splash.css
+++ b/splash/splash.css
@@ -4,8 +4,24 @@ html {
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	font-size: 16px;
-	font-family: '.SFNSText-Regular', 'Helvetica Neue', 'Arial', sans-serif;
+	font-size: 10vh;
+	font-family: 'Century Gothic', 'Helvetica Neue', 'Arial', sans-serif;
+	  /* Location of the image */
+  background-image: url('https://images.unsplash.com/photo-1446141788762-7388aa611e72?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=35ee8451c9d5331fc8b8769f5af2bf29');
+  
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
+  
+  /* Background image is fixed in the viewport so that it doesn't move when 
+     the content's height is greater than the image's height */
+  background-attachment: fixed;
+  
+  /* This is what makes the background image rescale based
+     on the container's size */
+  background-size: cover;
 }
 * {
 	-webkit-box-sizing: border-box;
