--- a/splash/splash.css
+++ b/splash/splash.css
@@ -5,6 +5,7 @@ html {
 	width: 100%;
 	height: 100%;
 	font-size: 10vh;
+	color: white !important;
 	font-family: 'Century Gothic', 'Helvetica Neue', 'Arial', sans-serif;
 	  /* Location of the image */
   background-image: url('https://images.unsplash.com/photo-1446141788762-7388aa611e72?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=35ee8451c9d5331fc8b8769f5af2bf29');
@@ -44,7 +45,7 @@ html {
 	color: white;
 }
 .hero {
-	height: 85%;
+	height: 100vh;
 	width: 100vw;
 	position: relative;
 	overflow: hidden;
